# cpack-systemd-demo

./: CMakeLists.txt  README.md  hello-world.service.in  main.cc  post.sh.in  postun.sh.in  preun.sh.in
